--- a/AnalyseTool/ParameterControl/SubViewAnalyseTool.xaml
+++ b/AnalyseTool/ParameterControl/SubViewAnalyseTool.xaml
@@ -1,29 +1,32 @@
-﻿<UserControl x:Class="AnalyseTool.ParameterControl.Views.SubViewAnalyseTool"
-            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-            xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
-            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-            xmlns:viewmodel="clr-namespace:AnalyseTool.ParameterControl.ViewModels"
-            xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-            mc:Ignorable="d"
-            d:Height="450" 
-            d:Width="800">
+﻿<Window x:Class="AnalyseTool.ParameterControl.Views.SubViewAnalyseTool"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewmodel="clr-namespace:AnalyseTool.ParameterControl.ViewModels"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+        mc:Ignorable="d"
+        Icon="pack://application:,,,/AnalyseTool;component/Resources/Icons/AnalyzeTool_Icon.ico"
+        Title="Analyze Tool"
+        MinHeight="300"
+        MinWidth="500"
+        Height="600" 
+        Width="850">
 
-    <UserControl.Resources>
+    <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/Wpf.Ui;component/Resources/Theme/Light.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Wpf.Ui;component/Resources/Wpf.Ui.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <!-- Конвертер для отступов на основе уровня вложенности --><!--
+            <!-- Конвертер для отступов на основе уровня вложенности -->
+            <!--
             <helper:LevelToMarginConverter x:Key="LevelToMarginConverter"/>-->
         </ResourceDictionary>
-    </UserControl.Resources>
-    
-    
-    
-    <Grid>
+    </Window.Resources>
+
+    <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
             <RowDefinition/>
@@ -47,7 +50,7 @@
             </TextBox>
         </Grid>
 
-        <DataGrid ItemsSource="{Binding ParameterDefinitions}"
+        <DataGrid ItemsSource="{Binding ParameterCollectionView}"
                   d:ItemsSource="{d:SampleData}"
                   AutoGenerateColumns="False"
                   RowDetailsVisibilityMode="VisibleWhenSelected"
@@ -70,67 +73,70 @@
                 <DataGridTemplateColumn Header="Category Name">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding CategoriesString}" />
+                            <TextBlock Text="{Binding CategoriesString}" VerticalAlignment="Center"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
                 <!--Column for displaying the parameter name-->
-                <DataGridTemplateColumn Header="Parameter Name">
+                <DataGridTemplateColumn Header="Parameter Name" >
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Name}" />
+                            <TextBlock Text="{Binding Name}" VerticalAlignment="Center"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
                 <!--Column for displaying the parameter count-->
-                <DataGridTemplateColumn Header="Parameter&#10;Count" Width="65">
+                <DataGridTemplateColumn Header="Parameter&#10;Count">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding ParameterCount}" />
+                            <TextBlock Text="{Binding ParameterCount}" VerticalAlignment="Center"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
                 <!--Column for displaying the count of empty parameters-->
-                <DataGridTemplateColumn Header="Parameter&#10;Empty" Width="65">
+                <DataGridTemplateColumn Header="Parameter&#10;Empty">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding ParameterEmpty}" />
+                            <TextBlock Text="{Binding ParameterEmpty}" VerticalAlignment="Center"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
                 <!--Column for displaying the count of filled parameters-->
-                <DataGridTemplateColumn Header="Parameter&#10;Filled" Width="65">
+                <DataGridTemplateColumn Header="Parameter&#10;Filled">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding ParameterFilled}" />
+                            <TextBlock Text="{Binding ParameterFilled}" VerticalAlignment="Center"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
                 <!--Column for displaying the percentage of filled parameters-->
-                <DataGridTemplateColumn Header="Parameter&#10;Filled in %" Width="65">
+                <DataGridTemplateColumn Header="Parameter&#10;Filled in %">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Grid>
+                            <Grid VerticalAlignment="Center">
                                 <!--Rectangle visualizing the percentage-->
-                                <Rectangle Width="{Binding ParameterFilledProzent}" Height="18" Fill="Pink" HorizontalAlignment="Left" />
+                                <Rectangle Width="{Binding ParameterFilledProzent}" 
+                                           Height="18" 
+                                           Fill="Pink" 
+                                           HorizontalAlignment="Left" />
                                 <!--Text displaying the percentage-->
-                                <TextBlock Text="{Binding ParameterFilledProzent}" HorizontalAlignment="Center" />
+                                <TextBlock Text="{Binding ParameterFilledProzent}" 
+                                           HorizontalAlignment="Center"/>
                             </Grid>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
                 <!--Column with a button to select empty elements-->
-                <DataGridTemplateColumn Header="Select Empty&#10;Elements" Width="80">
+                <DataGridTemplateColumn Header="Select Empty&#10;Elements">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Height="18"
-                                    Command="{Binding DataContext.SelectElementsCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                            <ui:Button Command="{Binding DataContext.SelectElementsCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
                                     CommandParameter="{Binding}"
                                     Content="Select"
                                     VerticalContentAlignment="Center"/>
@@ -139,11 +145,10 @@
                 </DataGridTemplateColumn>
 
                 <!--Column with a button to select filled elements-->
-                <DataGridTemplateColumn Header="Select Filled&#10;Elements" Width="80">
+                <DataGridTemplateColumn Header="Select Filled&#10;Elements" >
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Height="18"
-                                    Command="{Binding DataContext.SelectFilledElementsCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                            <ui:Button Command="{Binding DataContext.SelectFilledElementsCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
                                     CommandParameter="{Binding}"
                                     Content="Select"
                                     VerticalContentAlignment="Center"/>
@@ -185,8 +190,11 @@
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
                                                 <Grid>
-                                                    <Rectangle Width="{Binding ParameterFilledProzent}" Height="18" Fill="Pink" HorizontalAlignment="Left"/>
-                                                    <TextBlock Text="{Binding ParameterFilledProzent}" HorizontalAlignment="Center"/>
+                                                    <Rectangle Width="{Binding ParameterFilledProzent}" 
+                                                               Fill="Pink" 
+                                                               HorizontalAlignment="Left"/>
+                                                    <TextBlock Text="{Binding ParameterFilledProzent}" 
+                                                               HorizontalAlignment="Center"/>
                                                 </Grid>
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
@@ -195,12 +203,10 @@
                                         <GridViewColumnHeader Content="Select Filled&#10;Elements"/>
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
-                                                <Button Width="40"
-                                            Height="18" 
-                                            Command="{Binding DataContext.SelectFilledElementsCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-                                            CommandParameter="{Binding}"
-                                            Content="Select" 
-                                            VerticalContentAlignment="Center"/>
+                                                <Button Command="{Binding DataContext.SelectFilledElementsCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                                                        CommandParameter="{Binding}"
+                                                        Content="Select" 
+                                                        VerticalContentAlignment="Center"/>
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
@@ -214,4 +220,4 @@
 
         </DataGrid>
     </Grid>
-</UserControl>
+</Window>
